# lambda2SKIBC

./: CMakeLists.txt  LICENSE  README.md  eval.cpp  lambda2skibc.cpp  lambda2skibc.g4  lambda2skibc.h  test1.txt  test2.txt
